# web-hw-08

./: pyproject.toml
part_1/: config.ini  seed.py
part_2/: RabitMQ_connect.py  config.ini  consumer_email.py  consumer_sms.py  models.py  producer.py
