[tool.poetry]
name = "web-hw-08"
version = "0.1.0"
description = ""
authors = ["maxafanasiev <80445276+maxafanasiev@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "web_hw_08"}]

[tool.poetry.dependencies]
python = "^3.11"
dnspython = "^2.4.1"
pymongo = "^4.4.1"
mongoengine = "^0.27.0"
redis = "^4.6.0"
redis-lru = "^0.1.2"
pika = "^1.3.2"
faker = "^19.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
